--- a/.github/workflows/terraform_apply_Iac.yml
+++ b/.github/workflows/terraform_apply_Iac.yml
@@ -26,4 +26,4 @@ jobs:
         if: steps.plan.status == 'failure'
         run: exit 1
       - name: apply
-        run: terraform apply -auto-appove
+        run: terraform apply -auto-approve
